--- a/server/pom.xml
+++ b/server/pom.xml
@@ -8,5 +8,12 @@
     <artifactId>server</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20220320</version>
+        </dependency>
+    </dependencies>
 
 </project>
