--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -32,7 +32,12 @@
             <artifactId>json</artifactId>
             <version>20220320</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.30</version>
+        </dependency>
     </dependencies>
 
 </project>
